openshift/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: concorde-policy-mapper-web
  labels:
    app: concorde-policy-mapper-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: concorde-policy-mapper-web
  template:
    metadata:
      labels:
        app: concorde-policy-mapper-web
    spec:
      containers:
        - name: web
          image: image-registry.openshift-image-registry.svc:5000/concorde-policy-mapper-web/concorde-policy-mapper-web:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 250m
              memory: 2Gi
            limits:
              cpu: "2"
              memory: 6Gi
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 30
