openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: concorde-policy-mapper-web
  labels:
    app: concorde-policy-mapper-web
spec:
  selector:
    app: concorde-policy-mapper-web
  ports:
    - port: 8080
      targetPort: 8080
