openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: concorde-policy-mapper-web
  annotations:
    haproxy.router.openshift.io/timeout: 10m
spec:
  to:
    kind: Service
    name: concorde-policy-mapper-web
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
